src/App.css
body {
  background-color: #a8c6cc;
  height: 100%;
  font-family: "Montserrat";
}

.app {
  position: relative;
  width: 100vw;
}

.app-layout {
  display: flex;
  width: 1400px;
  margin: 0 auto;
  height: 100vh;
}

.logo-big {
  text-align: center;
  width: 400px;
}

.content {
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  background-color: whitesmoke;
  width: 100%;
  padding: 80px 20px 20px 20px;
}

h1 {
  font-size: x-large;
  font-weight: bold;
  margin-bottom: 40px;
}

h2 {
  font-size: medium;
  font-weight: bold;
}

input,
textarea {
  font-family: inherit;
}

/*APPLE FORMAT*/

/* Désactiver le highlight bleu au tap */
button,
a {
  -webkit-tap-highlight-color: transparent; /* iOS tap color */
  -webkit-touch-callout: none; /* désactive le menu contextuel au long press */
}

/* Désactiver le style par défaut pour les liens */
a {
  color: inherit; /* prendre la couleur parent */
  text-decoration: none;
}

/* Optionnel : enlever outline sur focus (mais attention accessibilité) */
button:focus,
a:focus {
  outline: none;
}

button {
  color: inherit;
}

@media (max-width: 1399px) {
  .app-layout {
    width: 100%;
  }
}

@media (max-width: 576px) {
  .app-layout {
    flex-direction: column;
  }

  .content {
    width: 100%;
    overflow-y: auto;
    flex: 1;
  }

  .logo-big {
    text-align: center;
    width: 100%;
  }
}

